--- a/recipes-kernel/linux/files/kernelconfig.cfg
+++ b/recipes-kernel/linux/files/kernelconfig.cfg
@@ -1,3 +1,20 @@
 # fragment configs, add configs
 CONFIG_LOCALVERSION="-pad"
 CONFIG_DYNAMIC_DEBUG=y
+CONFIG_FB_SYS_FILLRECT=y
+CONFIG_FB_SYS_COPYAREA=y
+CONFIG_FB_SYS_IMAGEBLIT=y
+CONFIG_FB_SYS_FOPS=y
+CONFIG_FB_DEFERRED_IO=y
+CONFIG_FB_BACKLIGHT=y
+CONFIG_FB_SSD1307=y
+CONFIG_PAHOLE_HAS_SPLIT_BTF=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE_LEGACY_ACCELERATION is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER is not set
+CONFIG_FONT_SUPPORT=y
+# CONFIG_FONTS is not set
+CONFIG_FONT_8x8=y
+CONFIG_PAHOLE_HAS_SPLIT_BTF=y
