--- a/conf/machine/stm32mp1-demo.conf
+++ b/conf/machine/stm32mp1-demo.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@NAME: stm32mp15-mx
 #@DESCRIPTION: Configuration for STM32CubeMX generated project
-#@NEEDED_BSPLAYERS: layers/meta-openembedded/meta-oe layers/meta-openembedded/meta-python
+#@NEEDED_BSPLAYERS: layers/meta-openembedded/meta-oe layers/meta-openembedded/meta-python layers/meta-st/meta-st-stm32mp-addons
 
 ###########################################################################
 #
@@ -15,6 +15,7 @@ include conf/machine/include/st-machine-providers-stm32mp.inc
 # Define specific common machine name
 MACHINEOVERRIDES .= ":stm32mpcommonmx:stm32mp15commonmx"
 MACHINEOVERRIDES .= ":stm32mp1common:stm32mp15common"
+MACHINEOVERRIDES .= ":stm32mpmydemo"
 
 # =========================================================================
 # Chip architecture
@@ -30,6 +31,7 @@ BOOTSCHEME_LABELS ?= ""
 # =========================================================================
 # boot device
 # =========================================================================
+# Define the boot device supported
 BOOTDEVICE_LABELS ?= ""
 
 # =========================================================================
@@ -82,12 +84,12 @@ ENABLE_CUBEMX_DTB ?= "1"
 # Boot Scheme
 # =========================================================================
 #BOOTSCHEME_LABELS += "trusted"
-#BOOTSCHEME_LABELS += "optee"
+BOOTSCHEME_LABELS += "optee"
 
 # Boot Device Choice
 # =========================================================================
 # Define the boot device supported
-#BOOTDEVICE_LABELS += "sdcard"
+BOOTDEVICE_LABELS += "sdcard"
 #BOOTDEVICE_LABELS += "emmc"
 #BOOTDEVICE_LABELS += "nand-4-256"
 #BOOTDEVICE_LABELS += "nor-sdcard"
